service-service-communication-using-service-alias/demo2-alias-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo2-svc-alias
  namespace: demo2
spec:
  type: ExternalName
  externalName: demo2-svc.demo2.svc.cluster.local
