service-service-communication-using-service-alias/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: demo-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo
spec:
  hosts:
  - 127.0.0.1
  - demo2-svc.demo2.svc.cluster.local
  gateways:
  - demo-gateway
  - mesh
  http:
  - match:
    - uri:
        exact: /demo1
    route:
    - destination:
        host: demo1-svc.demo1.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        exact: /demo2
    route:
    - destination:
        host: demo2-svc.demo2.svc.cluster.local
        port:
          number: 80
    timeout: 10s
